nombre en json con -

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
   {
-      "name": "Página web para pulido",
+      "name": "pagina-web-para-pulido",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
